--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "8.1.1"
+    "version": ""
   },
   "dependencies": {
-    "@vercel/speed-insights": "^1.3.1",
     "hexo": "^8.1.1",
     "hexo-asset-image": "^1.0.0",
     "hexo-generator-archive": "^2.0.0",
