--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Jackie's Blog
 subtitle: '探索区块链、自动化与开源技术'
 description: '这里是 Jackie 的个人博客，一名热爱技术的中国学生。专注分享区块链、智能合约、以太坊、CI/CD、开源项目以及 IT 基础设施的深度解析与实践笔记。'
-keywords: "区块链, 以太坊, 智能合约, 加密货币, CI/CD, 自动化部署, DevOps, 开源, IT技术, Jackie"
+keywords: '区块链, 以太坊, 智能合约, 加密货币, CI/CD, 自动化部署, DevOps, 开源, IT技术, Jackie'
 author: Jackie
 language: zh-CN
 timezone: Asia/Shanghai
