--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": ""
+    "version": "8.1.1"
   },
   "dependencies": {
     "eslint": "^9.39.2",
@@ -24,7 +24,6 @@
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
     "hexo-symbols-count-time": "^0.7.1",
-    "hexo-tag-cloud": "^2.1.2",
     "hexo-wordcount": "^6.0.1"
   },
   "scripts": {
