--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -104,8 +104,8 @@ open_graph:
 menu:
   首页: / || fa fa-home
   关于: /about/ || fa fa-user
-  标签: /tags/ || fa fa-tags
-  #分类: /categories/ || fa fa-th
+  #标签: /tags/ || fa fa-tags
+  分类: /categories/ || fa fa-th
   归档: /archives/ || fa fa-archive
   #schedule: /schedule/ || fa fa-calendar
   #sitemap: /sitemap.xml || fa fa-sitemap
@@ -281,10 +281,15 @@ reward_settings:
   animation: true
 
 reward:
-  wechatpay: /png/reward/wechatpay.png
-  alipay: /png/reward/alipay.png
+  wechatpay: /png/reward/wxp.png
+  alipay: /png/reward/alp.png
   #paypal: /images/paypal.png
-  bitcoin: /png/reward/bitcoin.png
+  bitcoin: /png/reward/btc.png
+  ethereum: /png/reward/eth.png
+  tron: /png/reward/trx.png
+  arbitrum: /png/reward/arb.png
+  bnbsmartchain: /png/reward/bsc.png
+
 
 # Subscribe through Telegram Channel, Twitter, etc.
 # Usage: `Key: permalink || icon` (Font Awesome)
@@ -604,7 +609,7 @@ mediumzoom: false
 
 # Vanilla JavaScript plugin for lazyloading images.
 # For more information: https://apoorv.pro/lozad.js/demo/
-lazyload: false
+lazyload: true
 
 # Automatically insert whitespace between CJK and half-width characters.
 # For more information: https://github.com/vinta/pangu.js
@@ -615,7 +620,7 @@ pangu: false
 # For more information: https://getquick.link
 # Front-matter variable (nonsupport home archive).
 quicklink:
-  enable: false
+  enable: true
 
   # Home page and archive page can be controlled through home and archive options below.
   # This configuration item is independent of `enable`.
@@ -725,7 +730,7 @@ gitalk:
   enable: false
   github_id: PyXMR2025
   repo: gitalk
-  client_id: Ov23lihdF52ZHRaY4sm3
+  client_id: ???
   client_secret: ???
   admin_user: PyXMR2025
   distraction_free_mode: true # Facebook-like distraction free mode
@@ -898,12 +903,12 @@ vendors:
   # The default CDN provider of third-party plugins.
   # Available values: local | jsdelivr | unpkg | cdnjs | custom
   # Dependencies for `plugins: local`: https://github.com/next-theme/plugins
-  plugins: cdnjs
+  plugins: custom
   # Custom CDN URL
   # For example:
   # custom_cdn_url: https://cdn.jsdelivr.net/npm/${npm_name}@${version}/${minified}
   # custom_cdn_url: https://cdnjs.cloudflare.com/ajax/libs/${cdnjs_name}/${version}/${cdnjs_file}
-  custom_cdn_url:
+  custom_cdn_url: https://s4.zstatic.net/ajax/libs/${cdnjs_name}/${version}/${cdnjs_file}  # 替换为 zstatic.net 镜像
 
 # Assets
 # Accelerate delivery of static files using a CDN
