--- a/_config.yml
+++ b/_config.yml
@@ -136,7 +136,7 @@ feed:
 tag_generator:
   per_page: 10 # 每页显示的文章数量
   enable_index_page: true # 是否生成标签索引页
-  enable_tagcloud: true # 是否生成标签云（需安装 hexo-tag-cloud 插件）
+  enable_tagcloud: false # 是否生成标签云（需安装 hexo-tag-cloud 插件）
 
 tagcloud:
   min_font_size: 16 # 最小字体大小
@@ -150,3 +150,9 @@ symbols_count_time:
   total_symbols: true          # 站点总字数统计
   total_time: true             # 站点总阅读时长
   exclude_codeblock: false     # 排除代码字数统计
+
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
