--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/(.*)\\.(png|jpg|jpeg|gif|webp|svg|ico)",
+      "source": "/(.*)\\.(png|jpg|jpeg|gif|webp|svg|ico|woff2)",
       "headers": [
         {
           "key": "Cache-Control",
