--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -680,7 +680,7 @@ comments:
   style: tabs
   # Choose a comment system to be displayed by default.
   # Available values: disqus | disqusjs | livere | gitalk | utterances | isso
-  active: utterances
+  active: gitalk
   # Setting `true` means remembering the comment system selected by the visitor.
   storage: false
   # Lazyload all comment systems.
@@ -693,7 +693,7 @@ comments:
     #gitalk:
     #  order: -2
     utterances:
-      text: Utterances评论
+      text: Utterances
       order: -1
 
 # Disqus
@@ -711,7 +711,7 @@ disqusjs:
   # Leave api empty if you are able to connect to Disqus API. Otherwise you need a reverse proxy for it.
   # For example:
   # api: https://disqus.skk.moe/disqus/
-  api:
+  api: 
   apikey: # Register new application from https://disqus.com/api/applications/
   shortname: # See: https://disqus.com/admin/settings/general/
 
@@ -722,15 +722,15 @@ livere_uid: # <your_uid>
 # Gitalk
 # For more information: https://gitalk.github.io
 gitalk:
-  enable: false
+  enable: true
   github_id: PyXMR2025
-  repo: gitalk
-  client_id: ???
-  client_secret: ???
+  repo: blog-talk
+  client_id: Ov23liwFgKqqzMwetvZo
+  client_secret: 0cc5bb2373d4ad3af282ac9f75578b50c6a3129c
   admin_user: PyXMR2025
   distraction_free_mode: true # Facebook-like distraction free mode
   # When the official proxy is not available, you can change it to your own proxy address
-  proxy: https://github.com/login/oauth/access_token # This is official proxy address
+  proxy: https://strong-caramel-969805.netlify.app/github_access_token # This is official proxy address
   # Gitalk's display language depends on user's browser or system environment
   # If you want everyone visiting your site to see a uniform language, you can set a force language value
   # Available values: en | es-ES | fr | ru | zh-CN | zh-TW
@@ -739,7 +739,7 @@ gitalk:
 # Utterances
 # For more information: https://utteranc.es
 utterances:
-  enable: true
+  enable: false
   repo: PyXMR2025/blog-talk # Github repository owner and name
   # Available values: pathname | url | title | og:title
   issue_term: og:title
