--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 20 
-    target-branch: "master" 
+    target-branch: "main" 
     commit-message:
       prefix: "📦 Dependencies"  
     labels:
@@ -16,7 +16,7 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 10
-    target-branch: "master"
+    target-branch: "main"
     commit-message:
       prefix: "Actions"  
     labels:
