--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "eslint": "^10.0.0",
     "hexo": "^8.1.1",
+    "hexo-article-recommender": "^1.0.5",
     "hexo-asset-image": "^1.0.0",
     "hexo-cli": "^4.3.2",
     "hexo-generator-archive": "^2.0.0",
@@ -23,7 +24,7 @@
     "hexo-renderer-marked": "^7.0.1",
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
-    "hexo-symbols-count-time": "^0.7.1",
+    "hexo-symbols-count-time": "^0.6.2",
     "hexo-wordcount": "^6.0.1"
   },
   "scripts": {
