新增博客聚合站

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -191,6 +191,9 @@ links:
   BLOGS·CN: https://blogscn.fun/
   博客中心: https://bokehub.com/home/
   无聊湾: https://boringbay.com/
+  博客星球: https://www.blogplanet.cn/
+  若梦博客: https://www.rmbk.cc/
+  博客录: https://boke.lu/
 
 # Table of Contents in the Sidebar
 # Front-matter variable (nonsupport wrap expand_all).
