--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -729,11 +729,10 @@ gitalk:
   github_id: PyXMR2025
   repo: blog-talk
   client_id: Ov23liwFgKqqzMwetvZo
-  client_secret: 0cc5bb2373d4ad3af282ac9f75578b50c6a3129c
   admin_user: PyXMR2025
   distraction_free_mode: true # Facebook-like distraction free mode
   # When the official proxy is not available, you can change it to your own proxy address
-  proxy: https://strong-caramel-969805.netlify.app/github_access_token # This is official proxy address
+  proxy: https://gitalk.openenet.cn/get_accesstoken # This is official proxy address
   # Gitalk's display language depends on user's browser or system environment
   # If you want everyone visiting your site to see a uniform language, you can set a force language value
   # Available values: en | es-ES | fr | ru | zh-CN | zh-TW
